deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myrile-flask
  labels:
    app: myrile-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myrile-flask
  template:
    metadata:
      labels:
        app: myrile-flask
    spec:
      containers:
        - image: amide/myrile-flask
          imagePullPolicy: IfNotPresent
          name: app-flask
          ports:
            - containerPort: 5000
