mysql-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-server
  labels:
    app: mysql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-server
  template:
    metadata:
      labels:
        app: mysql-server
    spec:
      containers:
        - name: mysql
          image: mysql:latest  # Utilisation de l'image MySQL officielle depuis Docker Hub
          ports:
            - containerPort: 3306
