service.yml
apiVersion: v1
kind: Service
metadata:
  name: myrile-flask-service
  labels:
    app: myrile-flask
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
      name: http
  selector:
    app: myrile-flask
  type: LoadBalancer
